# synth_esp

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/audio/: audio_config.h  audio_driver.c  audio_driver.h
main/input/: button_input.c  button_input.h
main/midi/: midi.h  midi_parser.c  midi_parser.h  midi_uart.c  midi_uart.h
main/synth/: envelope.c  envelope.h  modulation.c  modulation.h  oscillator.c  oscillator.h  synth_engine.c  synth_engine.h  voice.c  voice.h
